[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyumls"
version = "1.0.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["sample", "setuptools", "development"]
authors = [
  { name = "Michael S. Yao", email = "michael.yao@pennmedicine.upenn.edu" },
]
maintainers = [
  { name = "Michael S. Yao", email = "michael.yao@pennmedicine.upenn.edu" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["requests"]

[project.urls]
"Homepage" = "https://github.com/michael-s-yao/pyUMLS"
"Source" = "https://github.com/michael-s-yao/pyUMLS"
